Fixed CSS bug that was making the search bar jump around when the title in the title bar changed sizes

--- a/web-app/css/wardcoop.css
+++ b/web-app/css/wardcoop.css
@@ -241,8 +241,8 @@ color:white;
 div.searchbox
 {
 display:inline;
-float:left;
-margin:4px 0px 0px 544px;
+float:right;
+margin:4px 6px 0px 0px;
 }
 
 div.searchbox2
